# FormPilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: implement-instruction.md
.github/prompts/: implement-prompt.md
.github/workflows/: ci.yml
config/: settings.yaml
src/: __init__.py  data_cleaner.py  data_loader.py  form_mapper.py  form_parser.py  google_form_filler.py  logger.py  main.py  persona_generator.py  probability_model.py  response_generator.py  schema_detector.py  submission_runner.py
tests/: test_cli.py  test_data_pipeline.py  test_form_parser.py  test_mapping.py  test_response_generator.py  test_submission_runner.py
