[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formpilot"
version = "0.2.0"
description = "Generate synthetic survey responses and fill Google Forms safely."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5,<2.0",
    "playwright>=1.53,<2.0",
    "pydantic>=2.8,<3.0",
    "PyYAML>=6.0,<7.0",
    "rapidfuzz>=3.9,<4.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5.0,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
formpilot = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]
